ui improved and some bug fixed

--- a/about.html
+++ b/about.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- favicon -->
-    <link rel="shortcut icon" href="./assets/images/logo/logo.png" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="./assets/images/logo/logo.png"
+      type="image/x-icon"
+    />
 
     <!-- Third Party Css  -->
     <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css" />
@@ -16,74 +19,90 @@
     <!-- Custom Css  -->
     <link rel="stylesheet" href="./assets/css/main.css" />
 
-    <title>
-        Dogs And Mogs Holiday Centre, Onkaparinga Hills
-    </title>
-    <meta name="keywords" content="Boarding Kennels, Catteries, Boarding Pets" />
-    <meta name="description"
-        content="Dogs and Mogs is a conveniently located Boarding Kennel and Cattery in Onkaparinga Hills, South Australia." />
+    <title>Dogs And Mogs Holiday Centre, Onkaparinga Hills</title>
+    <meta
+      name="keywords"
+      content="Boarding Kennels, Catteries, Boarding Pets"
+    />
+    <meta
+      name="description"
+      content="Dogs and Mogs is a conveniently located Boarding Kennel and Cattery in Onkaparinga Hills, South Australia."
+    />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="Dogs And Mogs Holiday Centre, Onkaparinga Hills" />
-    <meta name="twitter:description"
-        content="Dogs and Mogs is a conveniently located Boarding Kennel and Cattery in Onkaparinga Hills, South Australia." />
-    <meta name="twitter:image"
-        content="https://lirp.cdn-website.com/8eb00bbb/dms3rep/multi/opt/dogs-mogs-fb-1920w.jpg" />
-    <meta property="og:description"
-        content="Dogs and Mogs is a conveniently located Boarding Kennel and Cattery in Onkaparinga Hills, South Australia." />
-    <meta property="og:title" content="Dogs And Mogs Holiday Centre, Onkaparinga Hills" />
-    <meta property="og:image"
-        content="https://lirp.cdn-website.com/8eb00bbb/dms3rep/multi/opt/dogs-mogs-fb-1920w.jpg" />
+    <meta
+      name="twitter:title"
+      content="Dogs And Mogs Holiday Centre, Onkaparinga Hills"
+    />
+    <meta
+      name="twitter:description"
+      content="Dogs and Mogs is a conveniently located Boarding Kennel and Cattery in Onkaparinga Hills, South Australia."
+    />
+    <meta
+      name="twitter:image"
+      content="https://lirp.cdn-website.com/8eb00bbb/dms3rep/multi/opt/dogs-mogs-fb-1920w.jpg"
+    />
+    <meta
+      property="og:description"
+      content="Dogs and Mogs is a conveniently located Boarding Kennel and Cattery in Onkaparinga Hills, South Australia."
+    />
+    <meta
+      property="og:title"
+      content="Dogs And Mogs Holiday Centre, Onkaparinga Hills"
+    />
+    <meta
+      property="og:image"
+      content="https://lirp.cdn-website.com/8eb00bbb/dms3rep/multi/opt/dogs-mogs-fb-1920w.jpg"
+    />
+  </head>
 
-</head>
-
-<body>
+  <body>
     <!-- headers  -->
     <header class="mob__navigation navigation">
-        <div class="navbar my__container">
-            <div class="brand_container">
-                <a href="index.html">
-                    <img src="./assets/images/logo/logo.png" alt="Brand Logo" />
-                </a>
-            </div>
-
-            <div class="nav__bread__crumb">
-                <i class="fa-solid fa-align-justify open__navigation__menu"></i>
-            </div>
-
-            <nav class="mob__navbar__nav">
-                <div class="navbar__menu">
-                    <a href="index.html" class="navbar__link">Home</a>
-                    <a href="about.html" class="navbar__link">About Us</a>
-                    <a href="booking.html" class="navbar__link">Booking Enquiry</a>
-                </div>
-            </nav>
-
-            <div class="call__container">
-                <a href="javascript:void(0)" class="theme__button">Call Us</a>
-            </div>
+      <div class="navbar my__container">
+        <div class="brand_container">
+          <a href="index.html">
+            <img src="./assets/images/logo/logo.png" alt="Brand Logo" />
+          </a>
         </div>
+
+        <div class="nav__bread__crumb">
+          <i class="fa-solid fa-align-justify open__navigation__menu"></i>
+        </div>
+
+        <nav class="mob__navbar__nav">
+          <div class="navbar__menu">
+            <a href="index.html" class="navbar__link">Home</a>
+            <a href="about.html" class="navbar__link">About Us</a>
+            <a href="booking.html" class="navbar__link">Booking Enquiry</a>
+          </div>
+        </nav>
+
+        <div class="call__container">
+          <a href="tel:(08) 8325 0666" class="theme__button">Call Us</a>
+        </div>
+      </div>
     </header>
 
     <header class="main__navigation navigation">
-        <div class="navbar my__container">
-            <div class="brand_container">
-                <a href="index.html">
-                    <img src="./assets/images/logo/logo.png" alt="Brand Logo" />
-                </a>
-            </div>
-
-            <nav class="navbar__nav">
-                <div class="navbar__menu">
-                    <a href="index.html" class="navbar__link">Home</a>
-                    <a href="about.html" class="navbar__link">About Us</a>
-                    <a href="booking.html" class="navbar__link">Booking Enquiry</a>
-                </div>
-            </nav>
-
-            <div class="call__container">
-                <a href="javascript:void(0)" class="theme__button">Call Us</a>
-            </div>
+      <div class="navbar my__container">
+        <div class="brand_container">
+          <a href="index.html">
+            <img src="./assets/images/logo/logo.png" alt="Brand Logo" />
+          </a>
         </div>
+
+        <nav class="navbar__nav">
+          <div class="navbar__menu">
+            <a href="index.html" class="navbar__link">Home</a>
+            <a href="about.html" class="navbar__link">About Us</a>
+            <a href="booking.html" class="navbar__link">Booking Enquiry</a>
+          </div>
+        </nav>
+
+        <div class="call__container">
+          <a href="tel:(08) 8325 0666" class="theme__button">Call Us</a>
+        </div>
+      </div>
     </header>
 
     <!-- headers  Ends -->
@@ -91,34 +110,49 @@
     <!-- ABout Section  -->
 
     <section class="about__section">
-        <div class="about__container my__container">
-            <div class="about__content">
-                <h3>Passionate Family Owned Pet Boarding Business in Onkaparinga Hills</h3>
-                <p>At Dogs and Mogs, we are a family-owned and operated business. We offer affordable boarding kennels
-                    and catteries in the
-                    convenient location of Onkaparinga Hills, South Australia. If your need someone to look after your
-                    4-legged family
-                    member while you're away from home, you can trust the friendly and passionate staff at Dogs and Mogs
-                    to take the best
-                    care of your pets.</p>
-            </div>
-            <div class="about__carousel">
-                <div class="about__image__gallery">
-                    <div class="about__gallery__card">
-                        <img src="./assets/images/about/banner-1.jpg" alt="About Dogs and Mogs">
-                    </div>
-                    <div class="about__gallery__card">
-                        <img src="./assets/images/about/banner-2.jpg" alt="About Dogs and Mogs">
-                    </div>
-                    <div class="about__gallery__card">
-                        <img src="./assets/images/about/banner-3.jpg" alt="About Dogs and Mogs">
-                    </div>
-                    <div class="about__gallery__card">
-                        <img src="./assets/images/about/banner-4.jpg" alt="About Dogs and Mogs">
-                    </div>
-                </div>
-            </div>
+      <div class="about__container my__container">
+        <div class="about__content">
+          <h3>
+            Passionate Family Owned Pet Boarding Business in Onkaparinga Hills
+          </h3>
+          <p>
+            At Dogs and Mogs, we are a family-owned and operated business. We
+            offer affordable boarding kennels and catteries in the convenient
+            location of Onkaparinga Hills, South Australia. If your need someone
+            to look after your 4-legged family member while you're away from
+            home, you can trust the friendly and passionate staff at Dogs and
+            Mogs to take the best care of your pets.
+          </p>
         </div>
+        <div class="about__carousel">
+          <div class="about__image__gallery">
+            <div class="about__gallery__card">
+              <img
+                src="./assets/images/about/banner-1.jpg"
+                alt="About Dogs and Mogs"
+              />
+            </div>
+            <div class="about__gallery__card">
+              <img
+                src="./assets/images/about/banner-2.jpg"
+                alt="About Dogs and Mogs"
+              />
+            </div>
+            <div class="about__gallery__card">
+              <img
+                src="./assets/images/about/banner-3.jpg"
+                alt="About Dogs and Mogs"
+              />
+            </div>
+            <div class="about__gallery__card">
+              <img
+                src="./assets/images/about/banner-4.jpg"
+                alt="About Dogs and Mogs"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!-- ABout Section Ends -->
@@ -126,25 +160,25 @@
     <!-- price List  -->
 
     <section class="price__section__about">
-        <div class="price__container__about my__container">
-            <h5>Affordable Daily Rates</h5>
-            <p>
-                At Dogs and Mogs, we cater to all cats and dogs of any size. We offer
-                a range of daily rates that vary depending on the size of your Pet.
-            </p>
-            <p>*Our daily rates are:</p>
-            <p>Cats: $13.00</p>
-            <p>Small Dogs: $23.00</p>
-            <p>Medium Dogs: $24.00</p>
-            <p>Large Dogs: $26.00</p>
-            <p>Extra Large Dogs: $27.00</p>
-            <p>Minimum 2 days charge applicable.</p>
-            <p>Easter and Christmas periods 5 days minimum charge required.</p>
-            <p>
-                *Please note that prices are per day, prices may change without prior
-                notice and prices may vary during public holidays
-            </p>
-        </div>
+      <div class="price__container__about my__container">
+        <h5>Affordable Daily Rates</h5>
+        <p>
+          At Dogs and Mogs, we cater to all cats and dogs of any size. We offer
+          a range of daily rates that vary depending on the size of your Pet.
+        </p>
+        <p>*Our daily rates are:</p>
+        <p>Cats: $13.00</p>
+        <p>Small Dogs: $23.00</p>
+        <p>Medium Dogs: $24.00</p>
+        <p>Large Dogs: $26.00</p>
+        <p>Extra Large Dogs: $27.00</p>
+        <p>Minimum 2 days charge applicable.</p>
+        <p>Easter and Christmas periods 5 days minimum charge required.</p>
+        <p>
+          *Please note that prices are per day, prices may change without prior
+          notice and prices may vary during public holidays
+        </p>
+      </div>
     </section>
 
     <!-- price List  Ends -->
@@ -152,19 +186,23 @@
     <!-- Perfect Holiday section -->
 
     <section class="perfect__holiday__section">
-        <div class="perfect__holiday__container my__container">
-            <div class="perfect__holiday__content">
-                <h3>The Perfect Pet Holiday Destination</h3>
-                <p>Catering to any size animal, Dogs and Mogs is the perfect holiday destination for your pets. Our
-                    friendly and passionate
-                    staff have a love for animals and go above and beyond to take care of your pets, especially fussy
-                    pets.
-                </p>
-            </div>
-            <div class="perfect__holiday__image">
-                <img src="./assets/images/about/holiday.jpg" alt="Perfect Holiday Dogs">
-            </div>
+      <div class="perfect__holiday__container my__container">
+        <div class="perfect__holiday__content">
+          <h3>The Perfect Pet Holiday Destination</h3>
+          <p>
+            Catering to any size animal, Dogs and Mogs is the perfect holiday
+            destination for your pets. Our friendly and passionate staff have a
+            love for animals and go above and beyond to take care of your pets,
+            especially fussy pets.
+          </p>
         </div>
+        <div class="perfect__holiday__image">
+          <img
+            src="./assets/images/about/holiday.jpg"
+            alt="Perfect Holiday Dogs"
+          />
+        </div>
+      </div>
     </section>
 
     <!-- Perfect Holiday section ENds -->
@@ -172,68 +210,73 @@
     <!-- discover -->
 
     <section class="discover__section">
-        <div class="disover__container">
-            <div class="discover__content">
-                <i class="fa-solid fa-phone"></i>
-                <p>To book your pet in for their next holiday,</p>
-                <p>give the friendly Dogs and Mogs Holiday</p>
-                <p>Centre team a call on 08 8325 0666 or</p>
-                <p>email at dogsandmogs@hotmail.com</p>
-                <button class="theme__button">Request a call back</button>
-            </div>
+      <div class="disover__container">
+        <div class="discover__content">
+          <i class="fa-solid fa-phone"></i>
+          <p>To book your pet in for their next holiday,</p>
+          <p>give the friendly Dogs and Mogs Holiday</p>
+          <p>Centre team a call on 08 8325 0666 or</p>
+          <p>email at dogsandmogs@hotmail.com</p>
+          <button class="theme__button">Request a call back</button>
         </div>
+      </div>
     </section>
 
     <!-- discover Ends -->
 
-
-
     <!-- Location -->
     <section class="location__section">
-        <div class="location__container my__container">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d112084.57670255215!2d77.17150078434372!3d28.610484203516194!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d28.6315508!2d77.1830238!4m5!1s0x390ce557b5293961%3A0xd64f3af06f981c9c!2spets%20shop!3m2!1d28.5929914!2d77.3051591!5e0!3m2!1sen!2sin!4v1651407590571!5m2!1sen!2sin"
-                width="600" height="450" style="border: 0" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+      <div class="location__container my__container">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d112084.57670255215!2d77.17150078434372!3d28.610484203516194!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d28.6315508!2d77.1830238!4m5!1s0x390ce557b5293961%3A0xd64f3af06f981c9c!2spets%20shop!3m2!1d28.5929914!2d77.3051591!5e0!3m2!1sen!2sin!4v1651407590571!5m2!1sen!2sin"
+          width="600"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </div>
     </section>
     <!-- Location Ends -->
 
     <!-- Footer Section  -->
     <footer class="footer__section">
-        <div class="footer__container my__container">
-            <div class="brand__container">
-                <img src="./assets/images/logo/logo.png" alt="Logo" />
-            </div>
-            <div class="footer__brand__info__container">
-                <div class="footer__info__section">
-                    <h6>Address</h6>
-                    <p>54 Kellys Rd, Onkaparinga Hills,</p>
-                    <p>South Australia 5163</p>
-                    <a href="privacy.html">Privacy Policy</a>
-                </div>
-
-                <div class="footer__info__section">
-                    <h6>Contact</h6>
-                    <p>08 8325 0666</p>
-                    <p>dogsandmogs@hotmail.com</p>
-                    <a
-                        href="http://instagram.com/dogsandmogssa?fbclid=IwAR0FtSziirovk5qYbn8eXa-8b-QE2m4tjsB0Jlzi8v7gHUCMjemN9sxRA6o">
-                        <i class="fa-brands fa-instagram"></i></a>
-                </div>
-
-                <div class="footer__info__section">
-                    <h6>Business Hour</h6>
-                    <p>Mon - Sun</p>
-                    <p>8:30 am - 9:30 am</p>
-                    <p>4:00 pm - 5:00 pm</p>
-                </div>
-            </div>
+      <div class="footer__container my__container">
+        <div class="brand__container">
+          <img src="./assets/images/logo/logo.png" alt="Logo" />
         </div>
+        <div class="footer__brand__info__container">
+          <div class="footer__info__section">
+            <h6>Address</h6>
+            <p>54 Kellys Rd, Onkaparinga Hills,</p>
+            <p>South Australia 5163</p>
+            <a href="privacy.html">Privacy Policy</a>
+          </div>
 
-        <div class="powered__by__container">
-            <p>Powered By <a href="javascript:void(0)">ABCD</a></p>
+          <div class="footer__info__section">
+            <h6>Contact</h6>
+            <p>08 8325 0666</p>
+            <p>dogsandmogs@hotmail.com</p>
+            <a
+              href="http://instagram.com/dogsandmogssa?fbclid=IwAR0FtSziirovk5qYbn8eXa-8b-QE2m4tjsB0Jlzi8v7gHUCMjemN9sxRA6o"
+            >
+              <i class="fa-brands fa-instagram"></i
+            ></a>
+          </div>
+
+          <div class="footer__info__section">
+            <h6>Business Hour</h6>
+            <p>Mon - Sun</p>
+            <p>8:30 am - 9:30 am</p>
+            <p>4:00 pm - 5:00 pm</p>
+          </div>
         </div>
+      </div>
+
+      <div class="powered__by__container">
+        <p>Powered By <a href="javascript:void(0)">ABCD</a></p>
+      </div>
     </footer>
 
     <!-- Footer Section Ends -->
@@ -247,6 +290,5 @@
 
     <!-- custom js  -->
     <script src="./assets/js/main.js"></script>
-</body>
-
+  </body>
 </html>
